Update pom.xml with latest changes